crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__only_newlines.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 3
  char_range:
    - 0
    - 3
  html: "<span id=\"gap-0-3\">​</span>"
  offset_map:
    - byte_range:
        - 0
        - 3
      char_range:
        - 0
        - 3
      node_id: gap-0-3
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 1
  source_hash: 0
