crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__single_paragraph.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 11
  char_range:
    - 0
    - 11
  html: "<p id=\"n0\">Hello world</p>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 11
      char_range:
        - 0
        - 11
      node_id: n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 11
  source_hash: 2216321107127430384
