crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__three_paragraphs.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 5
  char_range:
    - 0
    - 5
  html: "<p id=\"n0\">One.\n</p>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 4
      char_range:
        - 0
        - 4
      node_id: n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 4
    - byte_range:
        - 4
        - 5
      char_range:
        - 4
        - 5
      node_id: n0
      char_offset_in_node: 4
      child_index: ~
      utf16_len: 1
  source_hash: 9153687894432250931
- byte_range:
    - 6
    - 11
  char_range:
    - 6
    - 11
  html: "<p id=\"n1\">Two.\n</p>\n"
  offset_map:
    - byte_range:
        - 6
        - 6
      char_range:
        - 6
        - 6
      node_id: n1
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 6
        - 10
      char_range:
        - 6
        - 10
      node_id: n1
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 4
    - byte_range:
        - 10
        - 11
      char_range:
        - 10
        - 11
      node_id: n1
      char_offset_in_node: 4
      child_index: ~
      utf16_len: 1
  source_hash: 3900796536115303959
- byte_range:
    - 12
    - 18
  char_range:
    - 12
    - 18
  html: "<p id=\"n2\">Three.</p>\n"
  offset_map:
    - byte_range:
        - 12
        - 12
      char_range:
        - 12
        - 12
      node_id: n2
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 12
        - 18
      char_range:
        - 12
        - 18
      node_id: n2
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 6
  source_hash: 11679754215709541712
