crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__trailing_double_newline.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 6
  char_range:
    - 0
    - 6
  html: "<p id=\"n0\">Hello\n</p>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 5
      char_range:
        - 0
        - 5
      node_id: n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 5
    - byte_range:
        - 5
        - 6
      char_range:
        - 5
        - 6
      node_id: n0
      char_offset_in_node: 5
      child_index: ~
      utf16_len: 1
  source_hash: 1280328235052234789
- byte_range:
    - 6
    - 7
  char_range:
    - 6
    - 7
  html: "<span id=\"gap-6-7\">​</span>"
  offset_map:
    - byte_range:
        - 6
        - 7
      char_range:
        - 6
        - 7
      node_id: gap-6-7
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 1
  source_hash: 0
