crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__two_paragraphs.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 17
  char_range:
    - 0
    - 17
  html: "<p id=\"p-0-n0\" dir=\"ltr\">First paragraph.\n</p>"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: p-0-n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 16
      char_range:
        - 0
        - 16
      node_id: p-0-n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 16
    - byte_range:
        - 16
        - 17
      char_range:
        - 16
        - 17
      node_id: p-0-n0
      char_offset_in_node: 16
      child_index: ~
      utf16_len: 1
  source_hash: 15312977301334065815
- byte_range:
    - 18
    - 35
  char_range:
    - 18
    - 35
  html: "<span id=\"p-1-n0\">\n</span><p id=\"p-1-n1\" dir=\"ltr\">Second paragraph.</p>"
  offset_map:
    - byte_range:
        - 17
        - 18
      char_range:
        - 17
        - 18
      node_id: p-1-n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 1
    - byte_range:
        - 18
        - 18
      char_range:
        - 18
        - 18
      node_id: p-1-n1
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 18
        - 35
      char_range:
        - 18
        - 35
      node_id: p-1-n1
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 17
  source_hash: 11636620376496732832
