crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__unicode_emoji.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 16
  char_range:
    - 0
    - 13
  html: "<p id=\"n0\">Hello 🎉 world</p>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 16
      char_range:
        - 0
        - 13
      node_id: n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 14
  source_hash: 2978553570995254863
